<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.LoginActivity"
    android:background="@drawable/login">


    <ImageView
        android:id="@+id/login_app_logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:src="@drawable/second_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        />

    <EditText
        android:id="@+id/login_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_app_logo"
        android:layout_marginTop="5dp"
        android:background="@drawable/inputs"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="@color/pink"
        android:textColorHint="@color/pink"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        />


    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_phone_number"
        android:background="@drawable/inputs"
        android:padding="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/pink"
        android:textColorHint="@color/pink"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/login_password"
        android:layout_marginTop="5dp"
        >

        <com.rey.material.widget.CheckBox
            android:id="@+id/remember_me_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Material.Drawable.CheckBox"
            android:text="@string/remember_me"
            android:textColor="@color/firebrick"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:layout_marginLeft="17dp"
            />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:layout_marginLeft="80dp"
            android:text="@string/forgot_password"/>

    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout1"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="17dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/login"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/landlord_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_marginLeft="80dp"
        android:text="@string/i_am_a_landlord"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/login_button"
        android:layout_marginEnd="23dp"/>

    <TextView
        android:id="@+id/not_landlord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_marginLeft="80dp"
        android:text="@string/not_a_landlord"
        android:layout_alignParentStart="true"
        android:layout_below="@id/login_button"
        android:layout_marginStart="23dp"
        android:visibility="invisible"/>

</RelativeLayout>